reports/docs/notebooks/HelloWorld.err.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
%matplotlib inline
import pandas as pd
import cvxportfolio as cp
------------------

Traceback [0;36m(most recent call last)[0m:

[0m  File [1;32m/opt/hostedtoolcache/Python/3.10.11/x64/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3505[0m in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)[0m

[0m  Cell [1;32mIn[1], line 3[0m
    import cvxportfolio as cp[0m

[0m  File [1;32m~/work/cvxportfolio/cvxportfolio/cvxportfolio/__init__.py:18[0m
    from .simulator import MarketSimulator[0m

[0m  File [1;32m~/work/cvxportfolio/cvxportfolio/cvxportfolio/simulator.py:31[0m
    from .returns import MultipleReturnsForecasts[0m

[0;36m  File [0;32m~/work/cvxportfolio/cvxportfolio/cvxportfolio/returns.py:19[0;36m
[0;31m    from .costs import BaseCost[0;36m

[0;36m  File [0;32m~/work/cvxportfolio/cvxportfolio/cvxportfolio/costs.py:119[0;36m[0m
[0;31m    for el in self.costs[0m
[0m                        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m expected ':'

SyntaxError: expected ':' (costs.py, line 119)

